# spec/api/v1/openapi.json
@@ -3363,12 +3363,20 @@
           "plan_version_id",
           "plan_version",
           "status",
-          "current_period_start"
+          "current_period_start",
+          "auto_advance_invoices",
+          "charge_automatically"
         ],
         "properties": {
+          "auto_advance_invoices": {
+            "type": "boolean"
+          },
           "billing_day_anchor": {
             "type": "integer",
             "format": "int32"
+          },
+          "charge_automatically": {
+            "type": "boolean"
           },
           "currency": {
             "$ref": "#/components/schemas/Currency"
@@ -3607,6 +3615,9 @@
               "$ref": "#/components/schemas/CreateSubscriptionAddOn"
             }
           },
+          "auto_advance_invoices": {
+            "type": "boolean"
+          },
           "billing_day_anchor": {
             "type": [
               "integer",
@@ -3615,6 +3626,9 @@
             "format": "int32",
             "maximum": 32767,
             "minimum": 1
+          },
+          "charge_automatically": {
+            "type": "boolean"
           },
           "coupon_codes": {
             "type": "array",
@@ -3681,6 +3695,8 @@
           "plan_version",
           "status",
           "current_period_start",
+          "auto_advance_invoices",
+          "charge_automatically",
           "components",
           "add_ons",
           "applied_coupons"
@@ -3698,9 +3714,15 @@
               "$ref": "#/components/schemas/AppliedCouponDetailed"
             }
           },
+          "auto_advance_invoices": {
+            "type": "boolean"
+          },
           "billing_day_anchor": {
             "type": "integer",
             "format": "int32"
+          },
+          "charge_automatically": {
+            "type": "boolean"
           },
           "checkout_url": {
             "type": [
